Properly resolve refinements in defined? on method call [Bug #16932]